[tool.poetry]
name = "httpx-load-testing"
version = "0.1.0"
description = ""
authors = ["sacOO7 <sachinshinde7676@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.22.0"
httpx = {extras = ["http2"], version = "^0.26.0"}
niquests = "^3.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
